--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,22 @@
 --- #YAML:1.0
-name:                Email-Valid
-version:             0.179
-abstract:            ~
-license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.31
-distribution_type:   module
-requires:     
-    Mail::Address:                 0
+name:               Email-Valid
+version:            0.180
+abstract:           ~
+author:  []
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Mail::Address:  0
+    Net::DNS:       0
+resources:
+    Repository:  http://github.com/rjbs/email-valid
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
